--- a/package.json
+++ b/package.json
@@ -4,20 +4,38 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js \"test/**/*@(.js|.jsx)\"",
+    "test:watch": "npm run test -- --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer-loader": "^2.1.0",
     "babel-core": "^6.7.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "chai": "^3.5.0",
+    "chai-immutable": "^1.5.4",
+    "css-loader": "^0.17.0",
+    "jsdom": "^8.2.0",
+    "mocha": "^2.4.5",
+    "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.12.3",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
   "babel": {
-    "presets": ["es2015", "react"]
+    "presets": [
+      "es2015",
+      "react"
+    ]
+  },
+  "dependencies": {
+    "classnames": "^2.2.1",
+    "immutable": "^3.7.6",
+    "react": "^0.14.8",
+    "react-dom": "^0.14.8"
   }
 }
